beautified activity.html

--- a/activities.html
+++ b/activities.html
@@ -12,7 +12,9 @@
 	<link href="headerStyle.css" rel="stylesheet">
 	<link rel="stylesheet" href="footerStyle.css">
 	<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css"
+		type="text/css" media="all" />
 </head>
 
 <body>
@@ -34,7 +36,8 @@
 	<div id="header">
 		<div id="header_box">
 			<p>活動内容<br />
-				<span style="font-style: italic">Activities</span></p>
+				<span style="font-style: italic">Activities</span>
+			</p>
 		</div>
 	</div>
 
@@ -42,19 +45,20 @@
 		<div class="cover">
 			<div class="content">
 				<h2>新歓</h2>
-				<p>機械研では4~5月にかけて、新歓を行っています。もちろん、新歓期以外の入会も大歓迎です!!<br/> 新歓情報は別ページ詳しく記載していますのでそちらをご覧ください。
+				<p>機械研では4~5月にかけて、新歓を行っています。もちろん、新歓期以外の入会も大歓迎です!!<br /> 新歓情報は別ページ詳しく記載していますのでそちらをご覧ください。
 				</p>
 				<p style="text-align: right">新歓情報→<a class="link_button" href="forFreshmans.html">Check!!</a></p>
 
 				<h2>ロボコン</h2>
-	<h3>NHKロボコン</h3>
-	<p>機械研究会はこれまでNHKロボコンにはほとんど出場していませんでしたが、この度2019年度に15年ぶりに出場しました。そして、初優勝することができました。8月25日にモンゴルで開かれるABUロボコンに日本を代表して出場することになります。NHKロボコン2019での機械研究会の活躍については7月15日に放送されるNHKロボコンのほうをご確認ください。
-	</p>
-	<h4>2019年</h4>
-	<p></p>
-	<img src="./dataFolder/MR1.jpg" alt="NHK2019">
+				<h3>NHKロボコン</h3>
+				<p>機械研究会はこれまでNHKロボコンにはほとんど出場していませんでしたが、この度2019年度に15年ぶりに出場しました。そして、初優勝することができました。8月25日にモンゴルで開かれるABUロボコンに日本を代表して出場することになります。NHKロボコン2019での機械研究会の活躍については7月15日に放送されるNHKロボコンのほうをご確認ください。
+				</p>
+				<h4>2019年</h4>
+				<p></p>
+				<img src="./dataFolder/MR1.jpg" alt="NHK2019">
 				<h3>キャチロボバトルコンテスト</h3>
-				<p> キャチロボバトルコンテストは、京都製作所が主催し、学生が「ものづくり」に 取り組む姿勢を応援するために行われているロボコンです。毎年、課題のお菓子を運搬し、 規定のルールに従い点数で競う競技です。機械研究会は、このキャチロボで2015年、2017年に 準優勝をはたしています。
+				<p> キャチロボバトルコンテストは、京都製作所が主催し、学生が「ものづくり」に 取り組む姿勢を応援するために行われているロボコンです。毎年、課題のお菓子を運搬し、
+					規定のルールに従い点数で競う競技です。機械研究会は、このキャチロボで2015年、2017年に 準優勝をはたしています。
 				</p>
 				<h4>2016年</h4>
 				<p>ワークは亀田製菓の手塩屋。左右についている大きなハンドで一気に運ぶ姿がかっこ良いです。</p>
@@ -66,24 +70,26 @@
 				<img src="./dataFolder/picture_2017.jpg" alt="catchRobo2017">
 				<h4>2018年</h4>
 				<p>ワークはグリコのカプリコ。2台の円筒形ハンドや一個鳥、共通エリアのカプリコを回収するカプリコなど、
-				様々な機構が組み合わさっています。</p>
+					様々な機構が組み合わさっています。</p>
 				<img src="./dataFolder/catch_2018.jpg" alt="catchRobo2018">
 
 				<h3>マイクロマウス</h3>
 				<p>　マイクロマウスは、自律的に迷路を探索し、ゴールまでたどり着く時間を競う競技 (マイクロマウス競技)と、ラインを自律的にトレースし、ゴールするまでの時間を競うロボトレース部門 があります。
 				</p>
 				<h4>マイクロマウス</h4>
-	<p>
-	マイクロマウス競技では、最大32×32マスの広大な迷路を手のひらサイズのロボットが自律的に探索します。ロボットは、最初は壁がどこにあるのかを知らない状態で探索を行い、迷路を記憶していきます。そして、迷路の記憶が完了した後、ゴールへの最短経路を走る高速走行にトライします。
-	</p>
+				<p>
+					マイクロマウス競技では、最大32×32マスの広大な迷路を手のひらサイズのロボットが自律的に探索します。ロボットは、最初は壁がどこにあるのかを知らない状態で探索を行い、迷路を記憶していきます。そして、迷路の記憶が完了した後、ゴールへの最短経路を走る高速走行にトライします。
+				</p>
 				<h4>ロボトレース</h4>
 
 				<h3>関西合同ロボコン</h3>
-				<p>関西合同ロボコンとは、私たち京都大学や大阪大学、立命館大学、京都工芸繊維大学の技術系サークル が集まって行われるロボコンです。競技内容はロボトレースで競い合い、他大学の技術系サークルとの 交流をしています。
+				<p>関西合同ロボコンとは、私たち京都大学や大阪大学、立命館大学、京都工芸繊維大学の技術系サークル が集まって行われるロボコンです。競技内容はロボトレースで競い合い、他大学の技術系サークルとの
+					交流をしています。
 				</p>
 
 				<h2>NF(学園祭)</h2>
-				<p>機械研究会はNFで毎年、自分たちが製作したものを教室で展示しています。<br /> ここでは、毎年定番の展示物を紹介します。また、先ほど紹介したキャチロボ、マイクロマウス の展示や個人の製作物も多々展示されるので是非見に来てください。
+				<p>機械研究会はNFで毎年、自分たちが製作したものを教室で展示しています。<br /> ここでは、毎年定番の展示物を紹介します。また、先ほど紹介したキャチロボ、マイクロマウス
+					の展示や個人の製作物も多々展示されるので是非見に来てください。
 				</p>
 				<h3>巨大UFOキャッチャー</h3>
 				<p>機械研名物の巨大UFOキャッチャー。これは見に来るしかない！</p>
@@ -105,16 +111,18 @@
 				<img src="./dataFolder/gahaku.jpg" alt="Load Failed">
 				<h3>2019年新歓ロボ</h3>
 				<p>2019年度新歓ロボは以下の二つです</p>
-	<h4>リコーダーロボット</h4>
-	<img src="./dataFolder/ricoder.jpg" alt="Load Failed">
+				<h4>リコーダーロボット</h4>
+				<img src="./dataFolder/ricoder.jpg" alt="Load Failed">
 
 			</div>
 		</div>
 
 		<div class="side_bar">
 			<img src="./dataFolder/logo_gear3_gray.png" alt="kikaiken" style="margin-top: 50px">
-			<div class="social_bar">	<!-- style=".social_bar a:hover i {color: red;}"-->
-				<a href="https://www.youtube.com/user/kikaiken" target="_blank"><i class="fab fa-youtube"></i>YouTube</a>
+			<div class="social_bar">
+				<!-- style=".social_bar a:hover i {color: red;}"-->
+				<a href="https://www.youtube.com/user/kikaiken" target="_blank"><i
+						class="fab fa-youtube"></i>YouTube</a>
 			</div>
 			<div class="social_bar">
 				<a href="https://twitter.com/mechatrocreator" target="_blank"><i class="fab fa-twitter"></i>Twitter</a>
@@ -174,7 +182,7 @@
 
 			<div class="Qbox">
 				<p><i class="far fa-envelope fa-color: white fa-fw"></i>
-					Contact us<br/>kikaiken[at]gmail.com
+					Contact us<br />kikaiken[at]gmail.com
 				</p>
 			</div>
 
