added catchrobo2020 to index.html

--- a/activities.html
+++ b/activities.html
@@ -72,6 +72,11 @@
 				<p>ワークはグリコのカプリコ。2台の円筒形ハンドや一個鳥、共通エリアのカプリコを回収するカプリコなど、
 					様々な機構が組み合わさっています。</p>
 				<img src="./dataFolder/catch_2018.jpg" alt="catchRobo2018">
+				<h4>2019年</h4>
+				<p>ワークは栗山米菓のばかうけです。</p>
+				<h4>2020年</h4>
+				<p>コロナウィルスの影響でオンラインで設計を発表する大会になりました。当大会で機械研究会は優勝を収めました。</p>
+				<img src="./dataFolder/catchrobo2020.png" alt="catchRobo2020">
 
 				<h3>マイクロマウス</h3>
 				<p>　マイクロマウスは、自律的に迷路を探索し、ゴールまでたどり着く時間を競う競技 (マイクロマウス競技)と、ラインを自律的にトレースし、ゴールするまでの時間を競うロボトレース部門 があります。
