--- a/forFreshmans.html
+++ b/forFreshmans.html
@@ -43,7 +43,12 @@
 			<div class="content">
 
 				<h2>2021年度新歓情報</h2>
-				
+				<p>ZOOM説明会を開催します。 開催日は3/28,4/3,4/9,4/17,4/25です。</p>
+				<img src="dataFolder/bira2021.jpeg" />
+				<p>
+				新歓Twitterアカウント:
+				<a href="https://twitter.com/KUkikaiken_SK">@KUkikaiken_SK</a>
+				</p>
 				<h2>サークル紹介</h2>
 				<p>京都大学機械研究会という大学公認サークルです。</p>
 				<p>活動内容はロボコンや電子工作、プログラミングなど様々です。 自由にものづくりを楽しむことができ、かつ将来の仕事などに役立つスキルが身につくという素晴らしいサークルです。
