--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
 	<div class="new_info">
 		<p><i class="fas fa-info fa-2x fa-fw"></i>New Topics</p>
 		<ul>
+			
+			<li>
+				<div class="date">2020/03/28</div>
+				<div class="info_title"><a href="forFreshmans.html">新歓情報</a></div>
+			</li>
+
 			<li>
 				<div class="date">2020/05/10</div>
 				<div class="info_title"><a href="forFreshmans.html">オンライン仮入会・体験のお知らせ</a></div>
